--- a/ValorantStoreChecker/Ressources/vi.lproj/Localizable.strings
+++ b/ValorantStoreChecker/Ressources/vi.lproj/Localizable.strings
@@ -6,19 +6,19 @@ Created by Gordon on 2022-08-07.
 */
 
 // Translated using https://github.com/GWesley/auto_localize
-"SignIn" = "Đăng nhập";
+"SignIn" = "Đăng Nhập";
 
-"PrivacyDisclaimer" = "Bằng cách nhấp vào Đăng nhập, bạn đồng ý với các điều khoản và điều kiện của chúng tôi và [Chính sách bảo mật của chúng tôi](https://www.craft.do/s/fqxdg6asyp8wak)";
+"PrivacyDisclaimer" = "Bằng cách nhấp vào Đăng Nhập, bạn đồng ý với các điều khoản và điều kiện của chúng tôi và [Chính sách bảo mật của chúng tôi](https://www.craft.do/s/fqxdg6asyp8wak)";
 
-"Login" = "Đăng nhập vào tài khoản Riot của bạn";
+"Login" = "Đăng Nhập Bằng Tài Khoản Riot";
 
-"InvalidCredentials" = "Thông tin không hợp lệ";
+"InvalidCredentials" = "Thông Tin Không Hợp Lệ";
 
-"Username" = "tên tài khoản";
+"Username" = "Tên Tài Khoản";
 
-"Password" = "Mật khẩu";
+"Password" = "Mật Khẩu";
 
-"SelectRegion" = "Chọn địa bàn";
+"SelectRegion" = "Chọn Khu Vực";
 
 "Americas" = "Châu Mỹ";
 
@@ -28,7 +28,7 @@ Created by Gordon on 2022-08-07.
 
 "SouthKorea" = "Nam Triều Tiên";
 
-"TermsAndConditions" = "Các điều khoản và điều kiện";
+"TermsAndConditions" = "Điều Khoản và Điều Kiện";
 
 "MITLicense" = "Giấy phép MIT
 Bản quyền (c) 2022 Gordon ng
@@ -37,167 +37,167 @@ Quyền được cấp, miễn phí, cho bất kỳ ai có được bản sao ph
 
 Phần mềm được cung cấp như là, không có bảo hành dưới bất kỳ hình thức nào, rõ ràng hay ngụ ý, bao gồm nhưng không giới hạn trong các bảo đảm của thương mại, thể lực cho một mục đích cụ thể và không gây nhiễu.Trong mọi trường hợp, các tác giả hoặc chủ bản quyền sẽ phải chịu trách nhiệm đối với bất kỳ khiếu nại, thiệt hại hoặc trách nhiệm nào khác, cho dù trong hành động của hợp đồng, tra tấn hay nói cách khác, phát sinh từ hoặc liên quan đến phần mềm hoặc việc sử dụng hoặc các giao dịch khác trongPHẦN MỀM.";
 
-"Copyright" = "Bản quyền";
+"Copyright" = "Bản Quyền";
 
 "CopyrightNotice" = "VSC (Trình kiểm tra cửa hàng cho Valorant) không được liên kết, kết nối hoặc được chứng thực bởi các trò chơi Valorant hoặc Riot.Ngoài ra, Riot Games và Valorant là các nhãn hiệu được đăng ký theo Riot Games Inc.";
 
-"EnterTheCode" = "Nhập mã được gửi đến";
+"EnterTheCode" = "Nhập Mã Được Gửi Đến";
 
-"InvalidCode" = "Mã không hợp lệ";
+"InvalidCode" = "Mã Không Hợp Lệ";
 
-"TwoFactorAuthentication" = "Xác thực hai yếu tố";
+"TwoFactorAuthentication" = "Xác Thực Hai Yếu Tố";
 
-"DownloadAssets" = "Tải xuống tài sản";
+"DownloadAssets" = "Tải Xuống Tài Nguyên";
 
-"Stuck" = "Bị mắc kẹt? Bấm vào đây để thử lại.";
+"Stuck" = "Bị Mắc Kẹt? Bấm Vào Đây Để Thử Lại.";
 
-"NightMarket" = "Chợ đêm";
+"NightMarket" = "Chợ Đêm";
 
-"Store" = "Cửa hàng";
+"Store" = "Cửa Hàng";
 
-"Bundle" = "Bó";
+"Bundle" = "Bộ Sưu Tập";
 
-"SkinIndex" = "Chỉ số da";
+"SkinIndex" = "Danh Sách";
 
-"Settings" = "Cài đặt";
+"Settings" = "Cài Đặt";
 
-"Cancel" = "Hủy bỏ";
+"Cancel" = "Hủy Bỏ";
 
-"Cost" = "Phí tổn";
+"Cost" = "Giá";
 
-"ExclusiveSkinMessage" = "Đây là một độc quyền Battlepass, một nhân vật độc quyền hoặc một phiên bản giới hạn.";
+"ExclusiveSkinMessage" = "Đây là skin độc quyền Battlepass, một Buddy độc quyền hoặc một phiên bản giới hạn.";
 
-"Tier" = "Tầng";
+"Tier" = "Bậc";
 
-"Default1" = "1. Mặc định";
+"Default1" = "1. Mặc Định";
 
-"Default" = "Vỡ nợ";
+"Default" = "Mặc Định";
 
-"Unknown" = "không xác định";
+"Unknown" = "Không Xác Định";
 
-"Reloading" = "Tải lại";
+"Reloading" = "Đang Tải";
 
 "Reload" = "Tải lại";
 
-"UpdateAvailable" = "Cập nhật có sẵn";
+"UpdateAvailable" = "Có Sẵn Bản Cập Nhật";
 
-"EmptyBundle" = "Làm mới để xem gói";
+"EmptyBundle" = "Bộ Sưu Tập Trống";
 
-"NoOwned" = "Vui lòng tải lại cửa hàng hoặc mua một số giao diện :)";
+"NoOwned" = "Vui lòng tải lại cửa hàng hoặc mua thêm skin :)";
 
-"EmptySearch" = "Không có gì phù hợp với tìm kiếm của bạn";
+"EmptySearch" = "Không có tìm kiếm phù hợp";
 
-"Search" = "Tìm kiếm";
+"Search" = "Tìm Kiếm";
 
-"All" = "Tất cả các";
+"All" = "Tất Cả";
 
-"Owned" = "Sở hữu";
+"Owned" = "Đã Sở Hữu";
 
 "Knife" = "Dao";
 
-"Sidearm" = "SIDEARM";
+"Sidearm" = "Súng Lục";
 
 "SMGs" = "SMG";
 
-"Shotguns" = "Súng ngắn";
+"Shotguns" = "Shotgun";
 
-"Rifles" = "Súng trường";
+"Rifles" = "Súng Trường";
 
-"Sniper" = "Kẻ bắn tỉa";
+"Sniper" = "Súng Bắn Tỉa";
 
-"Heavy" = "Nặng";
+"Heavy" = "Súng Hạng Nặng";
 
 "HelpDev" = "Giúp Dev!";
 
 "AutomaticReload" = "Tự động tải lại";
 
-"Notify" = "Lưu trữ thông báo đặt lại";
+"Notify" = "Thông Báo";
 
-"Allow" = "Cho phép";
+"Allow" = "Cho Phép";
 
-"Appearance" = "Vẻ bề ngoài";
+"Appearance" = "Giao Diện";
 
 "Language" = "Ngôn ngữ";
 
-"ManageMedia" = "Quản lý phương tiện truyền thông";
+"ManageMedia" = "Quản Lý Phương Tiện Truyền Thông";
 
-"Support" = "Ủng hộ";
+"Support" = "Ủng Hộ";
 
-"Community" = "Cộng đồng";
+"Community" = "Cộng Đồng";
 
-"Share" = "Chia sẻ ứng dụng";
+"Share" = "Chia Sẻ";
 
-"Acknowledgements" = "Sự nhìn nhận";
+"Acknowledgements" = "Người Đóng Góp";
 
-"About" = "Về";
+"About" = "Thông Báo";
 
-"RememberPasswordInfo" = "Mật khẩu của bạn được bảo mật bởi Keychain.Đăng nhập hoặc vô hiệu hóa chuyển đổi sẽ tự động quên mật khẩu.Kích hoạt tính năng này bỏ qua các giới hạn thời gian API và cho phép đăng nhập tự động thay mặt người dùng.";
+"RememberPasswordInfo" = "Mật khẩu của bạn được bảo mật bởi Keychain.Đăng nhập hoặc vô hiệu hóa chuyển đổi sẽ tự động quên mật khẩu. Kích hoạt tính năng này bỏ qua các giới hạn thời gian API và cho phép đăng nhập tự động thay mặt người dùng.";
 
-"SignOut" = "Đăng xuất";
+"SignOut" = "Đăng Xuất";
 
-"Account" = "Tài khoản";
+"Account" = "Tài Khoản";
 
-"RememberPassword" = "Nhớ mật khẩu";
+"RememberPassword" = "Nhớ Mật Khẩu";
 
-"Region" = "Khu vực";
+"Region" = "Khu Vực";
 
-"SwitchAccounts" = "Chuyển đổi tài khoản";
+"SwitchAccounts" = "Đổi Tài Khoản";
 
-"HelpMessage" = "Xin chào!Tôi là một sinh viên đại học thiếu ngủ chỉ cố gắng làm cho cuộc sống tốt hơn một chút.Hãy xem xét việc giúp tôi thông qua bất kỳ phương pháp dưới đây!";
+"HelpMessage" = "Xin chào! Tôi là một sinh viên đại học thiếu ngủ chỉ đang cố gắng làm cho cuộc sống tốt hơn một chút. Hãy xem xét việc ủng hộ tôi thông qua bất kỳ phương pháp dưới đây!";
 
-"Review" = "Để lại một đánh giá";
+"Review" = "Để Lại Một Đánh Giá";
 
-"Star" = "Ngôi sao kho lưu trữ";
+"Star" = "Sao";
 
-"HelpTranslate" = "Giúp dịch";
+"HelpTranslate" = "Hỗ trợ dịch thuật";
 
-"ShowAppreciation" = "Thể hiện sự trân trọng";
+"ShowAppreciation" = "Ủng Hộ";
 
-"Sponsor" = "Mẹo cho tôi";
+"Sponsor" = "Tài Trợ";
 
 "CheckUpdates" = "Kiểm tra cập nhật";
 
 "ColourScheme" = "Bảng màu";
 
-"Auto" = "Tự động";
+"Auto" = "Tự Động";
 
-"Light" = "Ánh sáng";
+"Light" = "Sáng";
 
 "Dark" = "Tối";
 
-"Background" = "Tiểu sử";
+"Background" = "Ảnh Nền";
 
-"AppIcon" = "Biểu tượng ứng dụng";
+"AppIcon" = "Icon Ứng Dụng";
 
-"DefaultDark" = "Mặc định tối";
+"DefaultDark" = "Mặc Định Tối";
 
-"3DDark" = "3d tối";
+"3DDark" = "3D Tối";
 
-"Default Light" = "Ánh sáng mặc định";
+"Default Light" = "Mặc Định Sáng";
 
-"3DLight" = "Ánh sáng 3D";
+"3DLight" = "3D Sáng";
 
-"AutoplayVideos" = "Video phát tự động";
+"AutoplayVideos" = "Tự Động Phát Video";
 
-"Both" = "Cả hai";
+"Both" = "Cả Hai";
 
-"DownloadNewAssets" = "Tải xuống tài sản mới";
+"DownloadNewAssets" = "Tải Xuống Tài Nguyên Mới";
 
-"WifiOnly" = "Chỉ wifi";
+"WifiOnly" = "Chỉ dùng Wifi";
 
-"CellularOnly" = "Di động";
+"CellularOnly" = "Dữ Liệu Di Động";
 
-"Never" = "Chưa từng";
+"Never" = "Không Bao Giờ";
 
-"ClearAssets" = "Tài sản rõ ràng";
+"ClearAssets" = "Xóa Tài Nguyên";
 
-"Clear" = "Thông thoáng";
+"Clear" = "Xóa";
 
-"Create" = "Tạo một vé hỗ trợ";
+"Create" = "Gửi Hỗ Trợ";
 
-"FAQ" = "Câu hỏi thường gặp";
+"FAQ" = "Câu Hỏi Thường Gặp";
 
-"SourceCode" = "Mã nguồn";
+"SourceCode" = "Mã Nguồn";
 
 "FAQText" = "Tại sao ứng dụng cần thông tin đăng nhập của tôi?
                         
@@ -215,65 +215,65 @@ Ghi nhớ mật khẩu làm gì?
 
 Cách hiện tại mà nút tải lại yêu cầu cookie thay vì tên người dùng và mật khẩu của bạn, cho phép ứng dụng không lưu trữ mật khẩu của bạn.Tuy nhiên, các cookie này hết hạn sau một khoảng thời gian nhất định, yêu cầu người dùng phải đăng nhập lại.Để hợp lý hóa quy trình này, hãy nhớ rằng mật khẩu cho phép người dùng lưu mật khẩu của họ và cho phép tự động sau hậu trường đăng nhập. Nếu người dùng muốn không lưu mật khẩu, họ chỉ có thể đăng nhập và đăng nhập lại để tạo cookie mới.";
 
-"WebAndDisc" = "Trang web và bot bất hòa";
+"WebAndDisc" = "Trang Chủ";
 
-"DiscordServer" = "Máy chủ Discord";
+"DiscordServer" = "Server Discord";
 
-"ThankJulian" = "Cảm ơn bạn đã giúp đỡ trong việc trả lời nhiều câu hỏi của tôi!";
+"ThankJulian" = "Cảm ơn bạn đã giúp đỡ trong việc giải đáp các thắc mắc của tôi!";
 
 "ThankLunac" = "Cám ơn vì đã tiếp tục giúp đỡ tôi!";
 
 "ThankTranslator" = "Cảm ơn bạn đã giúp bạn dịch ứng dụng!";
 
-"Version" = "Phiên bản";
+"Version" = "Phiên Bản";
 
-"Privacy" = "Chính sách bảo mật";
+"Privacy" = "Chính Sách Bảo Mật";
 
-"WhatsNew" = "Có gì mới";
+"WhatsNew" = "Có Gì Mới";
 
-"MadeIn" = "Được thực hiện trong 🇨🇦";
+"MadeIn" = "Được tạo tại 🇨🇦";
 
-"NetworkError" = "Không có mạng";
+"NetworkError" = "Không Có Kết Nối Mạng";
 
-"InfoPrice" = "Giá của làn da này không may không có trong cơ sở dữ liệu của chúng tôi.";
+"InfoPrice" = "Giá Của Skin Này Không Có Trong Cơ Sở Dữ Liệu Của Chúng Tôi.";
 
 "ErrorTitle" = "Lỗi";
 
-"OK" = "VÂNG";
+"OK" = "Đồng Ý";
 
-"CopyError" = "Sao chép lỗi";
+"CopyError" = "Sao Chép Lỗi";
 
-"ErrorMessage1" = "Cookie cá nhân của bạn đã hết hạn.Đây là một giới hạn API mà tôi không có quyền kiểm soát.Có 2 tùy chọn để giải quyết điều này:
-1) Đăng xuất và đăng nhập.
-2) BẬT Nhớ Mật khẩu trong Cài đặt> Tài khoản.";
+"ErrorMessage1" = "Cookie cá nhân của bạn đã hết hạn. Đây là một giới hạn API mà tôi không có quyền kiểm soát. Có 2 tùy chọn để giải quyết điều này:
+1) Đăng xuất và đăng nhập lại.
+2) BẬT Nhớ Mật Khẩu trong Cài Đặt> Tài Khoản.";
 
-"ErrorMessage2" = "Mật khẩu sai đặt trong cài đặt";
+"ErrorMessage2" = "Sai Mật Khẩu";
 
-"ErrorMessage3" = "Mua hàng của bạn không thể được xác minh bởi App Store.";
+"ErrorMessage3" = "Ứng Dụng Của Bạn Không Thể Xác Minh Bởi AppStore.";
 
-"ErrorMessage4" = "Không có gói giảm giá nào, vui lòng thử lại sau.";
+"ErrorMessage4" = "Không Có Gói Giảm Giá Nào, Vui Lòng Thử Lại Sau.";
 
-"InformationTitle" = "Tại sao tài khoản Riot của tôi?";
+"InformationTitle" = "Tại Sao Dùng Tài Khoản Riot Của Tôi?";
 
 "Information" = "Mặc dù nhiều số liệu thống kê của bạn có quyền truy cập miễn phí mà không cần mật khẩu, nhưng cửa hàng của bạn là một ngoại lệ vì nó được coi là thông tin nhạy cảm.Để ứng dụng truy cập cửa hàng của bạn, nó cần thông tin đăng nhập của bạn nơi nó có được cửa hàng của bạn thông qua API nguồn mở.Thông tin bổ sung, mã nguồn và Câu hỏi thường gặp có thể được tìm thấy trong liên kết dưới đây.";
 
-"InvalidLogin" = "Đăng nhập không hợp lệ";
+"InvalidLogin" = "Đăng Nhập Không Hợp Lệ";
 
-"Reset" = "Cài lại";
+"Reset" = "Đặt Lại Ứng Dụng";
 
-"ResetInfo" = "Thỉnh thoảng do một số lỗi, lỗi có thể phát sinh.Nút này cho phép bạn đặt lại ứng dụng đầy đủ trong trường hợp các lỗi này.";
+"ResetInfo" = "Thỉnh thoảng do một số lỗi, lỗi có thể phát sinh. Nút này cho phép bạn đặt lại ứng dụng đầy đủ trong trường hợp các lỗi này.";
 
-"ReviewTitle" = "Thưởng thức VSC?";
+"ReviewTitle" = "Thích Ứng Dụng VSC?";
 
-"OpenGitHub" = "Để lại một ngôi sao github";
+"OpenGitHub" = "Để lại một ngôi sao trên Github";
 
-"MaybeLater" = "Có lẽ sau này";
+"MaybeLater" = "Để Sau";
 
-"NeverShowAgain" = "Không bao giờ hiển thị trở lại";
+"NeverShowAgain" = "Không Hiển Thị Lại";
 
 "ReviewPrompt" = "Vui lòng để lại đánh giá hoặc một ngôi sao trên GitHub!";
 
-"UpdateButton" = "Phiên bản ứng dụng mới có sẵn";
+"UpdateButton" = "Phiên Bản Ứng Dụng Mới Có Sẵn";
 
 "UpdateInstructions1" = "Nếu không có tùy chọn cập nhật, xin vui lòng:";
 
